@@ -14,6 +14,7 @@ test.jpg image/jpeg
 test.jpc image/jp2
 test.mng video/x-mng ox
 test.pat image/x-pat xxx
+test.pbm image/x-portable-bitmap
 test.pcx image/x-pcx
 test.pgm image/x-portable-graymap
 test.pix image/x-pix xxx
