@@ -1,5 +1,13 @@
 2008-06-11  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Tighten the magic for PBM,
+	PPM and PGM types, so as to avoid false positives
+	(Closes: #2359)
+	* tests/list:
+	* tests/test.pbm: Add a pbm test file
+
+2008-06-11  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Make application/x-gnuplot a
 	sub-class-of text/plain (Closes: #15852)
 
